fixed country list for URL

--- a/index.html
+++ b/index.html
@@ -1,17 +1,18 @@
 <script>
     // List of Peace Corps country pages
     const countries = [
-        "Benin", "Botswana", "Cameroon", "Eswatini", "Ethiopia", "Ghana", "Guinea", "Kenya", "Lesotho", 
-        "Liberia", "Madagascar", "Malawi", "Morocco", "Mozambique", "Namibia", "Rwanda", "Senegal", 
-        "Sierra Leone", "South Africa", "Tanzania", "The Gambia", "Togo", "Uganda", "Zambia",
-        "Cambodia", "Indonesia", "Kyrgyz Republic", "Mongolia", "Nepal", "Philippines", "Sri Lanka", 
-        "Thailand", "Timor-Leste", "Viet Nam",
-        "Albania", "Armenia", "Georgia", "Kosovo", "Moldova", "Montenegro", "North Macedonia", "Ukraine", 
-        "Belize", "Costa Rica", "Dominica", "Dominican Republic", "El Salvador", "Grenada", "Guatemala", "Jamaica", 
-        "Mexico", "Panama", "St. Lucia", "St. Vincent and the Grenadines", 
-        "Fiji", "Palau", "Samoa", "Tonga",
-        "Colombia", "Ecuador", "Guyana", "Paraguay"
-    ];
+        "benin", "botswana", "cameroon", "eswatini", "ethiopia", "ghana", "guinea", "kenya", "lesotho", 
+        "liberia", "madagascar", "malawi", "morocco", "mozambique", "namibia", "rwanda", "senegal", 
+        "sierra%20leone", "south%20africa", "tanzania", "the%20gambia", "togo", "uganda", "zambia",
+        "cambodia", "indonesia", "kyrgyz%20republic", "mongolia", "nepal", "philippines", "sri%20lanka", 
+        "thailand", "timor-leste", "viet%20nam",
+        "albania", "armenia", "georgia", "kosovo", "moldova", "montenegro", "north%20macedonia", "ukraine", 
+        "belize", "costa%20rica", "dominica", "dominican%20republic", "el%20salvador", "grenada", "guatemala", "jamaica", 
+        "mexico", "panama", "st.%20lucia", "st.%20vincent%20and%20the%20grenadines", 
+        "fiji", "palau", "samoa", "tonga",
+        "colombia", "ecuador", "guyana", "paraguay"
+];
+
 
     // Select a random country
     const randomCountry = countries[Math.floor(Math.random() * countries.length)];
