--- a/index.html
+++ b/index.html
@@ -3,12 +3,12 @@
     const countries = [
         "benin", "botswana", "cameroon", "eswatini", "ethiopia", "ghana", "guinea", "kenya", "lesotho", 
         "liberia", "madagascar", "malawi", "morocco", "mozambique", "namibia", "rwanda", "senegal", 
-        "sierra%20leone", "south%20africa", "tanzania", "the%20gambia", "togo", "uganda", "zambia",
-        "cambodia", "indonesia", "kyrgyz%20republic", "mongolia", "nepal", "philippines", "sri%20lanka", 
-        "thailand", "timor-leste", "viet%20nam",
-        "albania", "armenia", "georgia", "kosovo", "moldova", "montenegro", "north%20macedonia", "ukraine", 
-        "belize", "costa%20rica", "dominica", "dominican%20republic", "el%20salvador", "grenada", "guatemala", "jamaica", 
-        "mexico", "panama", "st.%20lucia", "st.%20vincent%20and%20the%20grenadines", 
+        "sierra-leone", "south-africa", "tanzania", "the-gambia", "togo", "uganda", "zambia",
+        "cambodia", "indonesia", "kyrgyz-republic", "mongolia", "nepal", "philippines", "sri-lanka", 
+        "thailand", "timor-leste", "viet-nam",
+        "albania", "armenia", "georgia", "kosovo", "moldova", "montenegro", "north-macedonia", "ukraine", 
+        "belize", "costa-rica", "dominica", "dominican-republic", "el-salvador", "grenada", "guatemala", "jamaica", 
+        "mexico", "panama", "st.-lucia", "st.-vincent-and-the-grenadines", 
         "fiji", "palau", "samoa", "tonga",
         "colombia", "ecuador", "guyana", "paraguay"
 ];
