add comment with url

--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
 <script>
+    // Redirects here: https://davisser.github.io/peacecorpstory/
     // List of Peace Corps country pages
     const countries = [
         "benin", "botswana", "cameroon", "eswatini", "ethiopia", "ghana", "guinea", "kenya", "lesotho", 
