Append destination URL

--- a/index.html
+++ b/index.html
@@ -19,5 +19,5 @@
     const randomCountry = countries[Math.floor(Math.random() * countries.length)];
 
     // Redirect to the Peace Corps page for that country
-    window.location.href = `https://www.peacecorps.gov/${randomCountry}/`;
+    window.location.href = `https://www.peacecorps.gov/${randomCountry}/stories`;
 </script>
